add endpoint for search groups
